Fixing layout issues, out-logout after token expiration not working properly yet.

--- a/web/assets/style/spotdesk.css
+++ b/web/assets/style/spotdesk.css
@@ -2,8 +2,8 @@ html, body {
     font-family: 'Roboto', sans-serif;
     font-size:14px;
     height:100%;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
 }
 
 #login {
@@ -21,14 +21,21 @@ html, body {
     width: 36px;
 }
 
+md-toolbar {
+    z-index: 9999;
+    font-size: 24px;
+    min-height: 56px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
 md-toolbar .fa {
     font-size: 24px;
     vertical-align: middle;
 }
 
 md-toolbar h1 {
-    font-size: 1.250em;
-    margin: auto 16px;
+    font-size: 1em;
+    margin: auto .75em;
     font-weight: 500;
 }
 
@@ -44,7 +51,7 @@ md-sidenav md-list .md-button.selected {
 }
 
 md-sidenav md-list {
-    padding: 0px 0px 8px 0px;
+    padding: 0 0 8px 0;
 }
 
 /* Primary content area */
